# rca-arch

./: README.md  pyproject.toml
src/rca/: __init__.py  config.py
src/rca/layers/: __init__.py  act_halting.py  gla.py  loop_embedding.py  lora_depth.py  lti_injection.py
src/rca/modeling/: __init__.py  rca_model.py  rca_mythos_model.py  recurrent_core.py
tests/: test_mythos_smoke.py
